--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "better-auth": "^1.2.7",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
